@@ -1,3 +1,9 @@
+2007-04-17  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>
+
+	* pycvsanaly/repository.py:
+
+	Make cvs work with absolute paths. 
+
 2007-04-15  Carlos Garcia Campos <carlosgc@gsyc.escet.urjc.es>
 
 	* pycvsanaly/plugins/graphs/__init__.py:
